dynamic css classes

--- a/src/Cars/Cars.css
+++ b/src/Cars/Cars.css
@@ -6,3 +6,24 @@
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14);
   border-radius: 5px;
 }
+
+.input {
+}
+
+.input:active,
+.input:focus {
+  outline: none;
+}
+
+.input.green {
+  border: 1px solid green;
+}
+
+.input.red {
+  border: 1px solid red;
+}
+
+.input.bold {
+  border: 2px solid green;
+  font-weight: bold;
+}
